+ pagination, load previous next

--- a/manual.html
+++ b/manual.html
@@ -131,13 +131,13 @@
                 <div class="row mt-5 mb-5">
                     <div  class="col-md-6">
 
-                        <form class="form-inline mb-4">
+                        <form class="form-inline mb-4 form-search">
                             <label class="my-1 mr-3" for="srch">Search:</label>
                             <div class="input-group">
                                 <input type="search" name="srch" id="srch" placeholder="search in this manual" class="form-control">
                                 <div class="input-group-append">
                                     <button type="submit" value="search" class="btn btn-secondary border-left-0" alt="Search">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search mb-1" viewBox="0 0 16 16">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                                         </svg>
                                     </button>
@@ -250,6 +250,13 @@
 
                 <div class="row mt-5 mb-5">
                     <div  class="col-md-11">
+
+                        <!-- LOAD PREVIOUS -->
+                        <div class="text-center mt-3 mb-4">
+                            <a class="btn btn-primary btn-lg" href="#" role="button">
+                                Load previous 10 pages
+                            </a>
+                        </div>
                         
                         <!-- CONTENT -->
 
@@ -320,6 +327,34 @@
                            </script>
                         
                         <!-- /CONTENT -->
+
+                        <!-- LOAD NEXT -->
+                        <div class="text-center mt-5">
+                            <a class="btn btn-primary btn-lg" href="#" role="button">
+                                Load next 10 pages
+                            </a>
+                        </div>
+
+                        <!-- PAGINATION -->
+                        <nav role="navigation" aria-label="Pagination Navigation" class="mt-5">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item active" aria-current="page">
+                                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
 
                     </div>
 
